@@ -137,6 +137,16 @@ sub parse_options (@)
 
 my %deps_extractor =
   (
+    libtool_macros =>
+      {
+        line_matcher => qr/^\s*required=.*\blibtool/,
+        nodist_prereqs => "libtool-macros.log",
+      },
+    gettext_macros =>
+      {
+        line_matcher => qr/^\s*required=.*\bgettext/,
+        nodist_prereqs => "gettext-macros.log",
+      },
     use_trivial_test_driver =>
       {
         line_matcher => qr/\btrivial-test-driver\b/,
