@@ -1,5 +1,15 @@
 2011-12-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: auto-generate deps for tests requiring libtool/gettext
+	* tests/gen-testsuite-part: Tests requiring libtool (or related
+	programs) will need libtool-provided m4 macros, so they should
+	be run after `libtool-macros.test'.  Similarly for gettext tests.
+	So, generate proper declarations of such dependencies.
+	* tests/Makefile.am: Remove now-unneeded hand-written declaration
+	of those dependencies.
+
+2011-12-23  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: remove FIXME comments from tricks to pacify syntax checks
 	Originally, I myself had insisted on adding those "FIXME" comments
 	near every unusual construct or use of "creative quoting" whose
